<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:enabled="false"
        android:textColor="#ff000000" />

    <TextView
        android:text="@string/lblPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/p0"
        android:textSize="20sp"
        android:textColor="#ff000000"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/player0">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mFive_0"
            android:text="@string/minus_five"
            android:layout_marginLeft="@dimen/btnSpacing"
            android:layout_marginRight="@dimen/btnSpacing"
            android:onClick="onClick"
            android:textSize="15sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minus_0"
            android:text="@string/minus"
            android:layout_marginLeft="@dimen/btnSpacing"
            android:layout_marginRight="@dimen/btnSpacing"
            android:onClick="onClick"
            android:textSize="15sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plus_0"
            android:text="@string/plus"
            android:layout_marginLeft="@dimen/btnSpacing"
            android:layout_marginRight="@dimen/btnSpacing"
            android:onClick="onClick"
            android:textSize="15sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pFive_0"
            android:text="@string/plusFive"
            android:layout_marginLeft="@dimen/btnSpacing"
            android:layout_marginRight="@dimen/btnSpacing"
            android:onClick="onClick"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView android:text="@string/lives" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lCount_0"
        android:textSize="20sp"
        android:textColor="#ff000000"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_gravity="right" />

    <TextView
        android:text="@string/lblPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/p1"
        android:textSize="20sp"
        android:textColor="#ff000000"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout" >

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mFive_1"
            android:text="@string/minus_five"
            android:layout_marginLeft="@dimen/btnSpacing"
            android:layout_marginRight="@dimen/btnSpacing"
            android:onClick="onClick"
            android:textSize="15sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minus_1"
            android:text="@string/minus"
            android:layout_marginLeft="@dimen/btnSpacing"
            android:layout_marginRight="@dimen/btnSpacing"
            android:onClick="onClick"
            android:textSize="15sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plus_1"
            android:text="@string/plus"
            android:layout_marginLeft="@dimen/btnSpacing"
            android:layout_marginRight="@dimen/btnSpacing"
            android:onClick="onClick"
            android:textSize="15sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pFive_1"
            android:text="@string/plusFive"
            android:layout_marginLeft="@dimen/btnSpacing"
            android:layout_marginRight="@dimen/btnSpacing"
            android:onClick="onClick"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:text="@string/lives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lCount_1"
        android:textSize="20sp"
        android:textColor="#ff000000"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_gravity="right" />

    <TextView
        android:text="@string/lblPlayer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/p2"
        android:textSize="20sp"
        android:textColor="#ff000000"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2" >

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mFive_2"
            android:text="@string/minus_five"
            android:layout_marginLeft="@dimen/btnSpacing"
            android:layout_marginRight="@dimen/btnSpacing"
            android:onClick="onClick"
            android:textSize="15sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minus_2"
            android:text="@string/minus"
            android:layout_marginLeft="@dimen/btnSpacing"
            android:layout_marginRight="@dimen/btnSpacing"
            android:onClick="onClick"
            android:textSize="15sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plus_2"
            android:text="@string/plus"
            android:layout_marginLeft="@dimen/btnSpacing"
            android:layout_marginRight="@dimen/btnSpacing"
            android:onClick="onClick"
            android:textSize="15sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pFive_2"
            android:text="@string/plusFive"
            android:layout_marginLeft="@dimen/btnSpacing"
            android:layout_marginRight="@dimen/btnSpacing"
            android:onClick="onClick"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:text="@string/lives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lCount_2"
        android:textSize="20sp"
        android:textColor="#ff000000"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_gravity="right" />

    <TextView
        android:text="@string/lblPlayer4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/p3"
        android:textSize="20sp"
        android:textColor="#ff000000"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3" >

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mFive_3"
            android:text="@string/minus_five"
            android:layout_marginLeft="@dimen/btnSpacing"
            android:layout_marginRight="@dimen/btnSpacing"
            android:onClick="onClick"
            android:textSize="15sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minus_3"
            android:text="@string/minus"
            android:layout_marginLeft="@dimen/btnSpacing"
            android:layout_marginRight="@dimen/btnSpacing"
            android:onClick="onClick"
            android:textSize="15sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plus_3"
            android:text="@string/plus"
            android:layout_marginLeft="@dimen/btnSpacing"
            android:layout_marginRight="@dimen/btnSpacing"
            android:onClick="onClick"
            android:textSize="15sp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pFive_3"
            android:text="@string/plusFive"
            android:layout_marginLeft="@dimen/btnSpacing"
            android:layout_marginRight="@dimen/btnSpacing"
            android:onClick="onClick"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:text="@string/lives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lCount_3"
        android:textSize="20sp"
        android:textColor="#ff000000"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_gravity="right" />


</LinearLayout>

</ScrollView>